# Algo-3----Paradigmas----Orga-1

Paradigmas/: IntroHaskell.hs  Testcase.hs
Paradigmas/Tp Paradigmas/: Makefile  tp.cabal
Paradigmas/Tp Paradigmas/src/: Documento.hs  Main.hs  PPON.hs
Sistemas Digitales/: Guia_2.circ  HalfAdderProyect.circ
Tda/: allPermutations  allPermutations.cpp  cambiandoseDeAula.cpp  magiCuadrados  magiCuadrados.cpp  tempCodeRunnerFile.cpp
Tda/magiCuadrados.dSYM/Contents/: Info.plist
Tda/magiCuadrados.dSYM/Contents/Resources/DWARF/: magiCuadrados
Tda/magiCuadrados.dSYM/Contents/Resources/Relocations/aarch64/: magiCuadrados.yml
